fix: fluid content shift

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,3 @@
     background: url("./static/check-darkmode.svg") no-repeat center center;
   }
 }
-
-.app {
-  overflow-y: scroll;
-}
